- Updated the logo name in the HTML file and in the corresponding .png image file to ensure consistency and accuracy. - Increased the font size of the nav links to improve readability and usability. - Adds the "target="_blank" and "rel="noopener" attributes to the logo in the project. This will ensure that when users click on the logo, it opens in a new tab

--- a/css/styles.css
+++ b/css/styles.css
@@ -678,6 +678,10 @@ span.tag {
     flex-direction: row;
   }
 
+  .desktop-nav a {
+    font-size: 1.6rem;
+  }
+
   .none {
     display: flex;
   }
